[개선] 리팩토링
- 카멜케이스로 변경
- 하드코딩부분 stream으로 변경