@@ -8,7 +8,7 @@ import com.onetier.retro_together.controller.response.*;
 
 import com.onetier.retro_together.domain.Member;
 import com.onetier.retro_together.domain.Post;
-import com.onetier.retro_together.domain.Post_Tag;
+import com.onetier.retro_together.domain.PostTag;
 import com.onetier.retro_together.domain.Tag;
 import com.onetier.retro_together.jwt.TokenProvider;
 
@@ -28,6 +28,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * PostService 수정함 2022- 10 - 23 오후 7시 34분
@@ -37,7 +38,7 @@ import java.util.Optional;
 public class PostService {
     private final PostRepository postRepository;
     private final TagRepository tagRepository;
-    private final Post_TagRepository post_tagRepository;
+    private final PostTagRepository postTagRepository;
     private final TokenProvider tokenProvider;
     private final S3UploaderService s3UploaderService; // S3Uploader 관련 추가 2022- 10 - 23 오후 7시 34분
 
@@ -86,43 +87,20 @@ public class PostService {
             e.printStackTrace();
         }
 
-        List<String> inputTag = Arrays.stream(requestDto.getTags().split(" ")).toList();
-        List<Tag> tagList = new ArrayList<>();
-        List<Post_Tag> post_tagList = new ArrayList<>();
-        for (String tag : inputTag) {
-            Optional<Tag> originTag = Optional.ofNullable(tagRepository.findByTagName(tag));
-            if (originTag.isPresent()) {
-                tagList.add(originTag.get());
-            } else {
-                Tag newTag = Tag.builder()
-                        .tagName(tag)
-                        .build();
-                tagRepository.save(newTag);
-                tagList.add(newTag);
-            }
-            Post_Tag post_tag = Post_Tag.builder()
-                    .post(null)
-                    .tag(tagList.get(tagList.size() - 1))
-                    .build();
-            post_tagRepository.save(post_tag);
-            post_tagList.add(post_tag);
-        }
+        List<Tag> inputTag = Arrays.stream(requestDto.getTags().split(" ")).map( // 2022-10-23 오후 8시 8분
+                tag -> tagRepository.findByTagName(tag).orElseGet(() -> tagRepository.save(new Tag(tag)))
+        ).toList();
+
 
         assert imageResponseDto != null;
         Post post = Post.builder()
                 .title(requestDto.getTitle())
                 .content(requestDto.getContent())
                 .image("imageResponseDto.getImageUrl()")
-                .post_tagList(post_tagList)
+                .postTagList(inputTag.stream().map(tag -> PostTag.builder().tag(tag).build()).collect(Collectors.toList()))
                 .member(member)
                 .build();
         postRepository.save(post);
-
-        // Post_Tag에 Post를 저장
-        for (Post_Tag post_tag : post_tagList) {
-            post_tag.setPost(post);
-            post_tagRepository.save(post_tag);
-        }
 
         return ResponseDto.success(
                 PostResponseDto.builder()
@@ -131,9 +109,7 @@ public class PostService {
                         .content(post.getContent())
                         .author(post.getMember().getNickname())
                         .imageUrl(post.getImage())
-                        .tags(post_tagRepository.findAllByPost(post).stream()
-                                .map(post_tag -> post_tag.getTag().getTagName())
-                                .toList())
+                        .tags(post.getPostTagList().stream().map(postTag -> postTag.getTag().getTagName()).collect(Collectors.toList()))
                         .createdAt(post.getCreatedAt())
                         .modifiedAt(post.getModifiedAt())
                         .build()
@@ -152,9 +128,7 @@ public class PostService {
                             .id(post.getId())
                             .title(post.getTitle())
                             .author(post.getMember().getNickname())
-                            .tags(post_tagRepository.findAllByPost(post).stream()
-                                    .map(post_tag -> post_tag.getTag().getTagName())
-                                    .toList())
+                            .tags(post.getPostTagList().stream().map(postTag -> postTag.getTag().getTagName()).collect(Collectors.toList()))
                             .createdAt(post.getCreatedAt())
                             .modifiedAt(post.getModifiedAt())
                             .build()
